[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/LevelSelectIcon.gd" type="Script" id=1]
[ext_resource path="res://Assets/LevelSelect.png" type="Texture" id=2]
[ext_resource path="res://Assets/LevelSelectBorder.png" type="Texture" id=3]

[node name="LevelSelectIcon" type="TextureRect"]
margin_right = 182.0
margin_bottom = 182.0
rect_pivot_offset = Vector2( 91, 91 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Outline" type="TextureRect" parent="."]
visible = false
margin_left = 39.0
margin_top = 39.0
margin_right = 141.0
margin_bottom = 141.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="Label" type="Label" parent="."]
margin_left = 39.0
margin_top = 39.0
margin_right = 140.0
margin_bottom = 140.0
text = "3"
align = 1
valign = 1

[connection signal="gui_input" from="." to="." method="_on_LevelSelect_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_LevelSelectIcon_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_LevelSelectIcon_mouse_exited"]
